--- a/Application/public/css/corps.css
+++ b/Application/public/css/corps.css
@@ -212,6 +212,7 @@ border-radius: 10px;
 .div3{
 display: flex;
 width: 53%;
+height: 265px;
 flex-wrap: wrap;
 background-color: #fffdfd;
 border-radius: 10px;
@@ -241,7 +242,7 @@ box-shadow: 1px 1px 4px black;
   .div3 #child1 img{
 
     width: 350px;
-    height: 235px;
+    height: 265px;
     border-radius: 10px 0 0 10px;
     /* margin-right: 15px; */
   
@@ -364,6 +365,19 @@ box-shadow: 1px 1px 4px black;
       text-shadow: 1px 1px 4px black;
 }
 
+.message2 {
+  width: 100%;
+  color: #fff;
+  font-size: 1.8rem;
+  background-color: #2f3780;
+  border-radius: 10px;
+  /* margin-bottom: 2%; */
+  /* font-weight: 500; */
+  padding: 1px 0 1px 0;
+  /* text-align: center; */
+      text-shadow: 1px 1px 4px black;
+}
+
 .title2 {
   width: 20%;
   color: #fff;
@@ -477,6 +491,11 @@ box-shadow: 1px 1px 4px black;
 
 }
 
+.div9 {
+  display: flex;
+  justify-content:space-between;
+}
+
 
 .classement{
   padding: 10px;
@@ -581,10 +600,66 @@ box-shadow: 1px 1px 4px black;
   transform: rotate(40deg);
 }
 
-
 .center-c {
+  margin-top: 7px;
   text-align: center;
   justify-content: center;
+}
+
+
+input 
+{
+  border: none;
+  border-radius: 5px; 
+}
+
+input#zone_text{
+   width: 400px;
+    padding: 5px;
+   padding-left: 10px;
+}
+
+  
+input#zone_textR{
+   width: 400px;
+    padding: 5px;
+   padding-left: 10px;
+   background: rgba(0, 0, 0, 0.40);
+
+}
+
+input#zone_text2{
+   width: 280px; 
+   padding-left: 15px;
+}
+
+input#zone_text3{
+   width: 150px;
+   height: 30px;
+   padding-left: 15px;
+   background-color: white;
+}
+
+.form-group{
+    padding-left: 10%;
+}
+
+.form-group2{
+    padding-left: 15%;
+}
+
+
+.form-profil{
+    
+   background-color: #2f3780;
+   background-size: cover;
+   width: 550px;
+   /* margin-left: 85px;
+   margin-right: 85px; */
+   padding-bottom: 15px;
+   border-radius: 10px; 
+   text-align: center;
+   box-shadow: 1px 1px 4px black;
 }
 
 
