--- a/Application/public/css/corps.css
+++ b/Application/public/css/corps.css
@@ -164,17 +164,18 @@ a#tel{
 
 .div1{
 display: flex;
-justify-content: left;
+justify-content:space-between;
+width: 100%;
 flex-wrap: wrap;
-background-color: #fcfcfc;
+/* background-color: #fcfcfc; */
 /* padding: 50px 50px 0 50px; */
-box-shadow: 1px 1px 4px black;
-border-radius: 10px;
+/* box-shadow: 1px 1px 4px black; */
+border-radius: 0 0 10px 10px;
 }
 
 .div1 #child1{
 
-  width: 42%;
+  width: 41.3%;
   /* margin: 0 0 50px 0; */
 
   }
@@ -248,6 +249,42 @@ box-shadow: 1px 1px 4px black;
   
     }
 
+    .div3a{
+      display: flex;
+      width: 53%;
+      flex-wrap: wrap;
+      background-color: #fffdfd;
+      border-radius: 10px;
+      box-shadow: 1px 1px 4px black;
+      }
+
+      .div3a h3{
+        background-color: #2f3780;
+        width: 336.5px;
+        text-align: center;
+        padding: 10px 0 10px 0;
+        border-radius: 0 10px 0 0;
+        color: #fff;
+        font-size: 1.3em;
+      }
+
+      .div3a h5{
+        /* background-color: #2f3780; */
+        padding: 0 0 0 25px;
+        margin: 0 0 15px 0;
+        line-height: 1.75;
+        /* border-radius: 0 15px 0 0; */
+        font-size: 0.95em;
+      }
+      
+        .div3a #child1 img{
+      
+          width: 350px;
+          height: 230px;
+          border-radius: 10px 0 0 10px;
+          /* margin-right: 15px; */
+        
+          }
 
 .div4 {
 
@@ -341,15 +378,14 @@ box-shadow: 1px 1px 4px black;
   color: #fff;
   font-size: 1.35rem;
   background-color: #2f3780;
-  border-radius: 10px 10px 0 0;
+  /* border-radius: 10px 10px 0 0; */
   /* margin-bottom: 2%; */
   border: 3px solid #2f3780;
   padding: 4px 0 4px 0;
-
   font-weight: 500;
   text-align: center;
-  
-      /* box-shadow: 1px 1px 4px black; */
+  text-shadow: 1px 1px 4px black;
+  box-shadow: 1px 1px 4px black;
 }
 
 .message {
@@ -368,12 +404,12 @@ box-shadow: 1px 1px 4px black;
 .message2 {
   width: 100%;
   color: #fff;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   background-color: #2f3780;
   border-radius: 10px;
   /* margin-bottom: 2%; */
   /* font-weight: 500; */
-  padding: 1px 0 1px 0;
+  /* padding: 1px 0 1px 0; */
   /* text-align: center; */
       text-shadow: 1px 1px 4px black;
 }
@@ -388,7 +424,7 @@ box-shadow: 1px 1px 4px black;
   /* border: 3px solid #2f3780; */
   font-weight: 500;
   padding: 5px 0 5px 0;
-  margin: 0 0 0 10px;
+  margin: 0 0 5px 10px;
   text-align: center;
   
       box-shadow: 1px 1px 4px black;
@@ -633,11 +669,19 @@ input#zone_text2{
    padding-left: 15px;
 }
 
+input[type="file"]{
+  background-color: #2f3780;
+}
+
+select#zone_text2{
+  width: 280px; 
+  padding-left: 15px;
+  padding:2px 0 2px 10px;
+  border-radius: 6px; 
+}
+
 input#zone_text3{
-   width: 150px;
-   height: 30px;
-   padding-left: 15px;
-   background-color: white;
+color:#fff;
 }
 
 .form-group{
